# perceptra-hub

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  supervisord.conf
.github/workflows/: docker-build.yml
docs/: AI_ANNOTATION.md  AUTH_MODULARIZATION_PLAN.md  CVOPS_LOOP.md  FIX_TRAINING_AGENT.md  HANDOFF_PROMPT.md  NEXT_FEATURE_PLAN.md  README-AGENT.md  SIMILARITY_FEATURE_PLAN.md  SIMILARITY_FRONTEND_BACKEND.md  TRAINING_PLAN.md  cloud_deployment_guide.md  complete_architecture.md  gpu_workers_readme.md  sdk_plan.md  trainer_usage_example.md
perceptra-sdk/: LICENSE  README.md  pyproject.toml
perceptra-sdk/src/perceptra/: __init__.py  _async_client.py  _base_client.py  _client.py  _constants.py  _exceptions.py  _files.py  _pagination.py  _utils.py
perceptra-sdk/src/perceptra/_transport/: _auth.py  _retry.py  _sse.py
perceptra-sdk/src/perceptra/resources/: _base.py  annotations.py  api_keys.py  classes.py  images.py  jobs.py  models.py  organizations.py  projects.py  storage.py  tags.py  training.py  versions.py
perceptra-sdk/src/perceptra/types/: __init__.py  annotation.py  api_key.py  compute.py  evaluation.py  image.py  job.py  model.py  organization.py  project.py  shared.py  storage.py  training.py  version.py
perceptra_hub/: manage.py
perceptra_hub/activity/: admin.py  apps.py  models.py  signals.py
perceptra_hub/agent/: .env.example  inference_executor.py  main.py  requirements.txt
perceptra_hub/annotations/: admin.py  apps.py  models.py  signals.py
perceptra_hub/api/: celerybeat-schedule.db  dependencies.py  error_handling.py  main.py
perceptra_hub/api_keys/: admin.py  auth.py  dependencies.py  models.py
perceptra_hub/augmentations/: admin.py  apps.py  models.py
perceptra_hub/authentication/: admin.py  models.py
perceptra_hub/billing/: admin.py  models.py
(+504 files in other folders)
